Fix horizontal scrolling on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,9 @@ body {
     position: absolute;
     padding:2vw;
     margin:auto;
+    right: 0px;
+    left: 0px;
+    overflow-x: hidden;
 }
 
 .header-container {
@@ -174,6 +177,7 @@ p {
     .row {   
       flex-direction: column;
       align-content: center;
+      justify-content: center;
       width:100%;
     }
     body, #gallery-container {
